--- a/Consolidated.html
+++ b/Consolidated.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>
 </title>
-<link rel="stylesheet" href="https://amxemr.com/jquery.mobile-1.1.0.min.css" />
+<link rel="stylesheet" href="http://dev.amxemr.com/jquery.mobile-1.1.0.min.css" />
         <style>
 #result {color:#ff0;}
 .mobile{width:90%;margin:0 auto 0;}
@@ -31,21 +31,21 @@
         </style>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js">
         </script>
-        <script src="https://amxemr.com/jquery.mobile-1.1.0.min.js">
+        <script src="http://dev.amxemr.com/jquery.mobile-1.1.0.min.js">
         </script>
 </head>
 <body>
 <div data-role="page" data-theme="a" id="page1">
  <div data-theme="a" data-role="header" data-position="fixed">
   <h3>Allermetrix</h3>
-  <a data-role="button"  rel="external" data-ajax="false" href="https://amxemr.com/logout.php">
+  <a data-role="button"  rel="external" data-ajax="false" href="http://dev.amxemr.com/logout.php">
   Logout
   </a>
   </div>
 <div data-role="content" class="desk">
 <div id="clsp" data-role="collapsible" data-collapsed="true">
 <h2>Consolidated Report:</h2>
-<form action="https://amxemr.com/search.php" method="POST" data-ajax="false">
+<form action="http://dev.amxemr.com/search.php" method="POST" data-ajax="false">
 <div  class="max">
 
 	<fieldset data-role="controlgroup" data-type="horizontal">
