--- a/OtolaryngicAllergy.html
+++ b/OtolaryngicAllergy.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML><html lang="en"><head><title>Otolaryngic Allergy</title><style>button{font:700 1.3em Arial;}body {font:400 1em Arial;}p{margin:2px 0 0 0}</style></head><body><div>
-<form action="https://amxemr.com/allergy.html"><button>Click here for 2600 more Allergists</button>
+<form action="http://dev.amxemr.com/allergy.html"><button>Click here for 2600 more Allergists</button>
 <h2>Otolaryngic Allergy</h2>
 <p>Liening Douglas
 <p>1724 Hamill Road, Hixson, TN 37343 423-267-6738
