--- a/newIndex.html
+++ b/newIndex.html
@@ -103,7 +103,7 @@ An Unauthorized Attempt to Access this Site is Violation of United States  and I
 <div role="main" data-role="content" data-theme="a" class="desk
 ui-content
 ui-body-a">
-<form method="post" action="https://amxemr.com/enter.php" data-ajax="false">
+<form method="post" action="http://dev.amxemr.com/enter.php" data-ajax="false">
 <input name="sub" value="0" type="hidden">
 <div class="ui-field-contain
 ui-body
@@ -171,7 +171,7 @@ ui-btn-corner-all">
 <p>
 Protected Health Information in this system is subject to Public Law 104-191,
 the Health Insurance Portability and Accountability Act of 1996 and the
-Final Privacy Rule and Final Security Rule codified in 45 C.F.R. § 160 and 164
+Final Privacy Rule and Final Security Rule codified in 45 C.F.R. ï¿½ 160 and 164
 Information in this system may only be used and/or disclosed in strict conformance with these authorities.
 </p>
 <p>
