--- a/testdrive.html
+++ b/testdrive.html
@@ -116,7 +116,7 @@ alt="tumblr page counter"></a></div></noscript>
 
 </span>
 
-<div  class="patient"><form style="display:block;" action="https://amxemr.com/eOffice/" method="post"><div>
+<div  class="patient"><form style="display:block;" action="http://dev.amxemr.com/eOffice/" method="post"><div>
 
 <button style="background:#fff;padding:.6em;border:4px groove #000;">
 
