--- a/cpl/Reports.HTML
+++ b/cpl/Reports.HTML
@@ -1,5 +1,5 @@
 <a href="file:///C:\C6\ALIS\ResultsNoEncrypt\200005\226534e.PDF">200005 - 226534  </a><font color=red></font><p>
-<form action="https://www.amxemr.com/cpl/alisReview.php" method="post">
+<form action="http://dev.amxemr.com/cpl/alisReview.php" method="post">
 <input type="hidden" name="test[]" value="100-1-8.61-na"/>
 <input type="hidden" name="test[]" value="F002-1-0-0"/>
 <input type="hidden" name="test[]" value="F004-1-0-0"/>
@@ -17,7 +17,7 @@
 <input type="hidden" name="test[]" value="F245-3-5.15-2"/>
 <button>POST REVIEW</button> </form>
 <a href="file:///C:\C6\ALIS\ResultsNoEncrypt\200005\226536e.PDF">200005 - 226536  </a><font color=red></font><p>
-<form action="https://www.amxemr.com/cpl/alisReview.php" method="post">
+<form action="http://dev.amxemr.com/cpl/alisReview.php" method="post">
 <input type="hidden" name="test[]" value="100-1-1-67.2-na"/>
 <input type="hidden" name="test[]" value="F002-1-0.02-0"/>
 <input type="hidden" name="test[]" value="F004-1-0.01-0"/>
@@ -53,7 +53,7 @@
 <input type="hidden" name="test[]" value="F245-3-1.77-0/1"/>
 <button>POST REVIEW</button> </form>
 <a href="file:///C:\C6\ALIS\ResultsNoEncrypt\200005\226537e.PDF">200005 - 226537  </a><font color=red></font><p>
-<form action="https://www.amxemr.com/cpl/alisReview.php" method="post">
+<form action="http://dev.amxemr.com/cpl/alisReview.php" method="post">
 <input type="hidden" name="test[]" value="100-1-21.39-na"/>
 <input type="hidden" name="test[]" value="F002-1-0-0"/>
 <input type="hidden" name="test[]" value="F004-1-0-0"/>
@@ -71,7 +71,7 @@
 <input type="hidden" name="test[]" value="F245-3-2.85-1"/>
 <button>POST REVIEW</button> </form>
 <a href="file:///C:\C6\ALIS\ResultsNoEncrypt\200005\226538e.PDF">200005 - 226538  </a><font color=red></font><p>
-<form action="https://www.amxemr.com/cpl/alisReview.php" method="post">
+<form action="http://dev.amxemr.com/cpl/alisReview.php" method="post">
 <input type="hidden" name="test[]" value="100-1-1-194.2-na"/>
 <input type="hidden" name="test[]" value="F002-1-0.01-0"/>
 <input type="hidden" name="test[]" value="F004-1-0.01-0"/>
@@ -89,7 +89,7 @@
 <input type="hidden" name="test[]" value="F245-3-4.44-2"/>
 <button>POST REVIEW</button> </form>
 <a href="file:///C:\C6\ALIS\ResultsNoEncrypt\200249\226529e.PDF">200249 - 226529 Email </a><font color=red></font><p>
-<form action="https://www.amxemr.com/cpl/alisReview.php" method="post">
+<form action="http://dev.amxemr.com/cpl/alisReview.php" method="post">
 <input type="hidden" name="test[]" value="D001-1-11868-4"/>
 <input type="hidden" name="test[]" value="D002-1-11559-4"/>
 <input type="hidden" name="test[]" value="E001-1-8913-4"/>
@@ -134,25 +134,25 @@
 <input type="hidden" name="test[]" value="W117-1-301-0"/>
 <button>POST REVIEW</button> </form>
 <a href="file:///C:\C6\ALIS\ResultsNoEncrypt\200287\226561e.PDF">200287 - 226561  </a><font color=red>*Make elimination diet 1+ for any food positve patients</font><p>
-<form action="https://www.amxemr.com/cpl/alisReview.php" method="post">
+<form action="http://dev.amxemr.com/cpl/alisReview.php" method="post">
 <input type="hidden" name="test[]" value="A099-7-0-0"/>
 <input type="hidden" name="test[]" value="A101-7-0-0"/>
 <input type="hidden" name="test[]" value="A103-7-0-0"/>
 <button>POST REVIEW</button> </form>
 <a href="file:///C:\C6\ALIS\ResultsNoEncrypt\200400\226527e.PDF">200400 - 226527 Email </a><font color=red></font><p>
-<form action="https://www.amxemr.com/cpl/alisReview.php" method="post">
+<form action="http://dev.amxemr.com/cpl/alisReview.php" method="post">
 <input type="hidden" name="test[]" value="A099-7-0-0"/>
 <input type="hidden" name="test[]" value="A101-7-0-0"/>
 <input type="hidden" name="test[]" value="A103-7-0-0"/>
 <button>POST REVIEW</button> </form>
 <a href="file:///C:\C6\ALIS\ResultsNoEncrypt\200400\226560e.PDF">200400 - 226560 Email </a><font color=red></font><p>
-<form action="https://www.amxemr.com/cpl/alisReview.php" method="post">
+<form action="http://dev.amxemr.com/cpl/alisReview.php" method="post">
 <input type="hidden" name="test[]" value="A100-7-136.8-1"/>
 <input type="hidden" name="test[]" value="A101-7-1.63-1"/>
 <input type="hidden" name="test[]" value="A104-7-161.2-1"/>
 <button>POST REVIEW</button> </form>
 <a href="file:///C:\C6\ALIS\ResultsNoEncrypt\500256\226528e.PDF">500256 - 226528  Fax</a><font color=red></font><p>
-<form action="https://www.amxemr.com/cpl/alisReview.php" method="post">
+<form action="http://dev.amxemr.com/cpl/alisReview.php" method="post">
 <input type="hidden" name="test[]" value="C007-1-0-0"/>
 <input type="hidden" name="test[]" value="D001-1-0-0"/>
 <input type="hidden" name="test[]" value="D002-1-0-0"/>
@@ -203,7 +203,7 @@
 <input type="hidden" name="test[]" value="M063-2-3.75-0"/>
 <button>POST REVIEW</button> </form>
 <a href="file:///C:\C6\ALIS\ResultsNoEncrypt\500379\226532e.PDF">500379 - 226532  </a><font color=red>waltersmd@gmail.com</font><p>
-<form action="https://www.amxemr.com/cpl/alisReview.php" method="post">
+<form action="http://dev.amxemr.com/cpl/alisReview.php" method="post">
 <input type="hidden" name="test[]" value="100-1-1-85.89-na"/>
 <input type="hidden" name="test[]" value="F010-1-0-0"/>
 <input type="hidden" name="test[]" value="F013-1-0-0"/>
@@ -234,34 +234,34 @@
 <input type="hidden" name="test[]" value="W006-1-0-0"/>
 <button>POST REVIEW</button> </form>
 <a href="file:///C:\C6\ALIS\ResultsNoEncrypt\500445\226524e.PDF">500445 - 226524  Fax</a><font color=red></font><p>
-<form action="https://www.amxemr.com/cpl/alisReview.php" method="post">
+<form action="http://dev.amxemr.com/cpl/alisReview.php" method="post">
 <input type="hidden" name="test[]" value="A100-7-75-1"/>
 <input type="hidden" name="test[]" value="A104-7-106.3-1"/>
 <button>POST REVIEW</button> </form>
 <a href="file:///C:\C6\ALIS\ResultsNoEncrypt\500445\226525e.PDF">500445 - 226525  Fax</a><font color=red></font><p>
-<form action="https://www.amxemr.com/cpl/alisReview.php" method="post">
+<form action="http://dev.amxemr.com/cpl/alisReview.php" method="post">
 <input type="hidden" name="test[]" value="A099-7-3.56-1"/>
 <input type="hidden" name="test[]" value="A103-7-5.86-1"/>
 <button>POST REVIEW</button> </form>
 <a href="file:///C:\C6\ALIS\ResultsNoEncrypt\500445\226526e.PDF">500445 - 226526  Fax</a><font color=red></font><p>
-<form action="https://www.amxemr.com/cpl/alisReview.php" method="post">
+<form action="http://dev.amxemr.com/cpl/alisReview.php" method="post">
 <input type="hidden" name="test[]" value="A099-7-0.81-1"/>
 <input type="hidden" name="test[]" value="A103-7-1.17-1"/>
 <button>POST REVIEW</button> </form>
 <a href="file:///C:\C6\ALIS\ResultsNoEncrypt\500454\226549e.PDF">500454 - 226549  Fax</a><font color=red></font><p>
-<form action="https://www.amxemr.com/cpl/alisReview.php" method="post">
+<form action="http://dev.amxemr.com/cpl/alisReview.php" method="post">
 <input type="hidden" name="test[]" value="A099-7-0-0"/>
 <input type="hidden" name="test[]" value="A101-7-0-0"/>
 <input type="hidden" name="test[]" value="A103-7-0.8-1"/>
 <button>POST REVIEW</button> </form>
 <a href="file:///C:\C6\ALIS\ResultsNoEncrypt\500454\226550e.PDF">500454 - 226550  Fax</a><font color=red></font><p>
-<form action="https://www.amxemr.com/cpl/alisReview.php" method="post">
+<form action="http://dev.amxemr.com/cpl/alisReview.php" method="post">
 <input type="hidden" name="test[]" value="A099-7-0-0"/>
 <input type="hidden" name="test[]" value="A101-7-0-0"/>
 <input type="hidden" name="test[]" value="A103-7-0-0"/>
 <button>POST REVIEW</button> </form>
 <a href="file:///C:\C6\ALIS\ResultsNoEncrypt\500918\226535e.PDF">500918 - 226535  </a><font color=red></font><p>
-<form action="https://www.amxemr.com/cpl/alisReview.php" method="post">
+<form action="http://dev.amxemr.com/cpl/alisReview.php" method="post">
 <input type="hidden" name="test[]" value="D001-1-0-0"/>
 <input type="hidden" name="test[]" value="D002-1-0-0"/>
 <input type="hidden" name="test[]" value="E001-1-0-0"/>
@@ -306,7 +306,7 @@
 <input type="hidden" name="test[]" value="W014-1-0.03-0"/>
 <button>POST REVIEW</button> </form>
 <a href="file:///C:\C6\ALIS\ResultsNoEncrypt\500918\226539e.PDF">500918 - 226539  </a><font color=red></font><p>
-<form action="https://www.amxemr.com/cpl/alisReview.php" method="post">
+<form action="http://dev.amxemr.com/cpl/alisReview.php" method="post">
 <input type="hidden" name="test[]" value="D001-1-0.01-0"/>
 <input type="hidden" name="test[]" value="D002-1-0-0"/>
 <input type="hidden" name="test[]" value="E001-1-0.01-0"/>
