--- a/sHome.html
+++ b/sHome.html
@@ -105,7 +105,7 @@ alt="tumblr page counter"></a></div></noscript>
 
 <div class="Object3972"><a href="sMainMenu.html" ><img src="files/IMG_388.jpg"  alt="" width="265px" height="54px"></a></div>
 
-<div class="Object3973"><a href="https://www.amxemr.com/" ><img src="files/IMG_389.jpg"  alt="" width="265px" height="61px"></a></div>
+<div class="Object3973"><a href="http://dev.amxemr.com/" ><img src="files/IMG_389.jpg"  alt="" width="265px" height="61px"></a></div>
 
 <div class="Object3974"><img src="files/logo_web.gif"  alt="" width="151px" height="45px"></div>
 
